<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.routine.RoutinesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_lg"
        android:layout_marginTop="@dimen/margin_md"
        android:text="@string/routines"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_lg"
        android:layout_marginTop="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_md"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <TextView
            android:id="@+id/total_routines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_md"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/wow_such_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wow_such_empty"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routine_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:scrollbarSize="2dp"
            android:scrollbarThumbVertical="@color/primary_variant"
            android:scrollbars="vertical" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/routine_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_md"
            android:contentDescription="@string/fab_add_desc"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

</LinearLayout>